Migrate db and remove merge conflicts from spec/requests.

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -49,9 +49,7 @@ end
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
-# gem 'mindbody-api'
-
-gem 'mindbody-api', path: '~/Bloc/sub/mindbody-api-1.0.1.alpha'
+gem 'mindbody-api'
 
 gem 'figaro'
 
