--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,7 @@
 .byebug_history
 
 # Ignore application configuration
-/config/application.yml
+backend/config/application.yml
+
+# Ignore frontend node_modules to make Github cleaner
+frontend/node_modules
