Ignore node_modules

--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,4 @@
 backend/config/application.yml
 
 # Ignore frontend node_modules to make Github cleaner
-frontend/node_modules
+/frontend/node_modules
